CHANGES IN VERSION 2.4.5
-------------------------

  o Corrected a wrong signature for the AnnotParam constructor.


CHANGES IN VERSION 2.4.4
-------------------------

  o A GRanges API change has been identified and patched by Michael Dondrup.
  Thanks!

CHANGES IN VERSION 2.4.3
-------------------------

 o Removed an unnecessary IRanges import (aggregate), which has been merged
  with the stats package one.


CHANGES IN VERSION 2.4.2
-------------------------

  o Removed a re-defined fileName generic overwriting a BiocGeneric one that
  broke the build on SnowLeopard

CHANGES IN VERSION 2.4.1
-------------------------

  o Uses rowRanges instead of rowData

  o Fixed issues in the deprecated gene+geneModel counting approach of
  the easyRNASeq function.

  o Updated the package dependencies

  o Adapted the demultiplex function to handle multicore. It is using the
  Shortread srdistance function under the hood, who internally uses bplapply,
  without ever detailing so (?!). As a consequence, it would spawn as many
  jobs as cores are detected and this breaks the vignette processing during
  R CMD check... As a consequence demultiplex got an mc.cores=1L new arguments
  that preserve its former serial approach but enables parallel processing,
  controlled by the user (as it should be!! and not invisibly in the code!)

  o Removed the dependency on locfit (importing what is necessary)

  o Exporting more functions, mostly locfit and DESeq functions

  o Adapted the parameters for the DESeq dispersion plot

CHANGES IN VERSION 2.4.0
-------------------------

  o Bioc. Release 3.1

CHANGES IN VERSION 2.3.4
-------------------------

  o Bioc. API changes: added missing imports, removed unneeded imports,
  added a missing package dependency

  o Removed generics now defined in BiocGenerics

CHANGES IN VERSION 2.3.3
-------------------------

  o Bioc. API changes

CHANGES IN VERSION 2.3.2
-------------------------

  o Bioc. API changes

CHANGES IN VERSION 2.3.1