@@ -3,6 +3,7 @@ CHANGES IN VERSION 2.4.5
 
   o Corrected a wrong signature for the AnnotParam constructor.
 
+  o Fixed the AnnotParam print method.
 
 CHANGES IN VERSION 2.4.4
 -------------------------
